--- a/site/composer.json
+++ b/site/composer.json
@@ -10,7 +10,8 @@
         "jenssegers/mongodb": "^3.3",
         "jenssegers/mongodb-session": "^1.2",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "laravelcollective/html": "^5.2.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
